# vail

./: .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  org.kde.vail.desktop  org.kde.vail.json  org.kde.vail.metainfo.xml
.reuse/: dep5
src/: CMakeLists.txt  app.cpp  app.h  controller.cpp  controller.h  main.cpp  translator.cpp  translator.h
src/ui/: About.qml  GlobalMenu.qml  Main.qml  PageHeader.qml  main.qml
